--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "deploy": "vite build && git add build && git commit -m 'Build for GitHub Pages' && git push origin master"
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
